feat(ui): add smart positioning to project selector dropdown
Use @floating-ui/react to automatically position dropdown based on
available screen space. Dropdown now flips and shifts to stay within
viewport bounds.

- Add @floating-ui/react dependency
- Integrate useFloating hook with flip, shift, offset middleware
- Remove fixed CSS positioning (top, left, right)
- Use Floating UI inline styles for dynamic positioning

Closes #2

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@bufbuild/protobuf": "^2.10.1",
     "@connectrpc/connect": "^2.1.1",
     "@connectrpc/connect-web": "^2.1.1",
+    "@floating-ui/react": "^0.27.16",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.0"
