feat: add Sentry configuration for edge and server environments
- Created sentry.edge.config.ts for edge feature initialization.
- Created sentry.server.config.ts for server request handling.
- Added pnpm-workspace.yaml to specify built dependencies for Sentry CLI.
- Configured Sentry with DSN, tracesSampleRate, logs, and PII settings.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@floating-ui/react": "^0.27.16",
     "@fontsource/noto-sans": "^5.2.10",
     "@radix-ui/react-popover": "^1.1.15",
+    "@sentry/nextjs": "^10.32.1",
     "@tanstack/react-table": "^8.21.3",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tiptap/extension-code-block-lowlight": "^3.12.1",
